change aoc cli runner & README.md